Add mhairi edits

--- a/src/site/business-workshops/limitless-abundance.njk
+++ b/src/site/business-workshops/limitless-abundance.njk
@@ -79,7 +79,7 @@ metaDescription: 'We get laser focused to deliver you career/business clarity li
                     </li>
                     <li class="workshop-includes-item">
                         <i class="far fa-check-circle"></i>
-                        <span class="workshop-includes-item-text">What abundance in this area looks and feels like.</span>
+                        <span class="workshop-includes-item-text">What abundance in this area looks, feels and flows like.</span>
                     </li>
                     <li class="workshop-includes-item">
                         <i class="far fa-check-circle"></i>
@@ -87,16 +87,17 @@ metaDescription: 'We get laser focused to deliver you career/business clarity li
                     </li>
                     <li class="workshop-includes-item">
                         <i class="far fa-check-circle"></i>
-                        <span class="workshop-includes-item-text">Your unique roadblocks to achieving all this.</span>
+                        <span class="workshop-includes-item-text">The personal roadblocks standing in your way.</span>
                     </li>
                     <li class="workshop-includes-item">
                         <i class="far fa-check-circle"></i>
-                        <span class="workshop-includes-item-text">The next, right step to take.</span>
+                        <span class="workshop-includes-item-text">Your crucial next, right step to take
+                        .</span>
                     </li>
                 </ul>
             </div>
             <p class="normal-text">
-                Sounds good?<span class="fw-b"> It will be!</span> 
+                Sound good?<span class="fw-b"> It will be!</span> 
             </p>
         </div>
         <div class="about-cta-btn">
@@ -130,23 +131,19 @@ metaDescription: 'We get laser focused to deliver you career/business clarity li
                 </li>
                 <li class="workshop-includes-item">
                     <i class="far fa-check-circle"></i>
-                    <span class="workshop-includes-item-text">You are not sure what career abundance looks like for you or how to get it</span>
+                    <span class="workshop-includes-item-text">You are not sure what abundance looks like for you in this part of your life or how to achieve it</span>
                 </li>
                 <li class="workshop-includes-item">
                     <i class="far fa-check-circle"></i>
-                    <span class="workshop-includes-item-text">Your vision of success in your career or business isn’t clear</span>
+                    <span class="workshop-includes-item-text">Your vision of success isn’t clear</span>
                 </li>
                 <li class="workshop-includes-item">
                     <i class="far fa-check-circle"></i>
-                    <span class="workshop-includes-item-text">Time, money or self belief are standing in the way of true abundance</span>
+                    <span class="workshop-includes-item-text">Time, money or self belief are standing in your way </span>
                 </li>
                 <li class="workshop-includes-item">
                     <i class="far fa-check-circle"></i>
-                    <span class="workshop-includes-item-text">You want to identify the next, right step to take towards limitless abundance, but don't know how</span>
-                </li>
-                <li class="workshop-includes-item">
-                    <i class="far fa-check-circle"></i>
-                    <span class="workshop-includes-item-text">Your not sure limitless abundance is possible for you in this area of your life</span>
+                    <span class="workshop-includes-item-text">You want to identify the next, right step to take towards limitless abundance in your career or business</span>
                 </li>
             </ul>
         </div>
@@ -156,7 +153,7 @@ metaDescription: 'We get laser focused to deliver you career/business clarity li
         <!-- countdown timer section -->
     <section class="simple-section bg-aqua">
         <h2 class="sect-title">
-            JOIN ME FOR THE CONFIDENCE COLLECTIVE WORKSHOP 
+            JOIN ME FOR THE LIMITLESS ABUNDANCE WORKSHOP 
         </h2>
         <div class="simple-section-text">
             <div class="timer-container">
@@ -231,19 +228,19 @@ metaDescription: 'We get laser focused to deliver you career/business clarity li
                 <ul class="workshop-includes-list normal-text">
                     <li class="workshop-includes-item">
                         <i class="far fa-check-circle"></i>
-                        <span class="workshop-includes-item-text">Through a powerful guided mediation, we will tap into what you truly desire for yourself in your career or business.</span>
+                        <span class="workshop-includes-item-text"><span class="fw-b">OPEN TO MORE.</span> Through a powerful guided mediation, we will tap into what you truly desire for yourself in your career or business.</span>
                     </li>
                     <li class="workshop-includes-item">
                         <i class="far fa-check-circle"></i>
-                        <span class="workshop-includes-item-text">I’ll help you uncover your unique model for success so you can start to create or work towards genuine gratification.</span>
+                        <span class="workshop-includes-item-text"><span class="fw-b">AWARE & EMPOWERED.</span> I’ll help you uncover your unique model for success so you can start to create or work towards genuine gratification.</span>
                     </li>
                     <li class="workshop-includes-item">
                         <i class="far fa-check-circle"></i>
-                        <span class="workshop-includes-item-text">We will look at where you are currently imposing limits on abundance and how to start navigating through these.</span>
+                        <span class="workshop-includes-item-text"><span class="fw-b">NAVIGATING LIMITS.</span> We will look at where you are currently imposing limits on abundance and how to start navigating through these.</span>
                     </li>
                     <li class="workshop-includes-item">
                         <i class="far fa-check-circle"></i>
-                        <span class="workshop-includes-item-text">Finally, through a powerful NLP technique, we will work from your seat of intuition to uncover the next right step towards all that you desire.</span>
+                        <span class="workshop-includes-item-text"><span class="fw-b">IN FLOW WITH YOUR NEXT STEP.</span> Finally, through a powerful NLP technique, we will work from your seat of intuition to uncover the next right step towards all that you desire.</span>
                     </li>
                 </ul>
             </div>
