Add more mhairi edits

--- a/src/site/business-workshops/limitless-abundance.njk
+++ b/src/site/business-workshops/limitless-abundance.njk
@@ -91,8 +91,7 @@ metaDescription: 'We get laser focused to deliver you career/business clarity li
                     </li>
                     <li class="workshop-includes-item">
                         <i class="far fa-check-circle"></i>
-                        <span class="workshop-includes-item-text">Your crucial next, right step to take
-                        .</span>
+                        <span class="workshop-includes-item-text">Your crucial next, right step to take.</span>
                     </li>
                 </ul>
             </div>
@@ -127,23 +126,23 @@ metaDescription: 'We get laser focused to deliver you career/business clarity li
             <ul class="workshop-includes-list normal-text">
                 <li class="workshop-includes-item">
                     <i class="far fa-check-circle"></i>
-                    <span class="workshop-includes-item-text">You are not completely satisfied in your current career or business</span>
+                    <span class="workshop-includes-item-text">You are not completely satisfied in your current career or business.</span>
                 </li>
                 <li class="workshop-includes-item">
                     <i class="far fa-check-circle"></i>
-                    <span class="workshop-includes-item-text">You are not sure what abundance looks like for you in this part of your life or how to achieve it</span>
+                    <span class="workshop-includes-item-text">You are not sure what abundance looks like for you in this part of your life or how to achieve it.</span>
                 </li>
                 <li class="workshop-includes-item">
                     <i class="far fa-check-circle"></i>
-                    <span class="workshop-includes-item-text">Your vision of success isn’t clear</span>
+                    <span class="workshop-includes-item-text">Your vision of success isn’t clear.</span>
                 </li>
                 <li class="workshop-includes-item">
                     <i class="far fa-check-circle"></i>
-                    <span class="workshop-includes-item-text">Time, money or self belief are standing in your way </span>
+                    <span class="workshop-includes-item-text">Time, money or self belief are standing in your way.</span>
                 </li>
                 <li class="workshop-includes-item">
                     <i class="far fa-check-circle"></i>
-                    <span class="workshop-includes-item-text">You want to identify the next, right step to take towards limitless abundance in your career or business</span>
+                    <span class="workshop-includes-item-text">You want to identify the next, right step to take towards limitless abundance in your career or business.</span>
                 </li>
             </ul>
         </div>
@@ -215,13 +214,13 @@ metaDescription: 'We get laser focused to deliver you career/business clarity li
 
     <!-- workshop includes section -->
     <section class="why-mhairi worksop-includes">
-        <div class="why-mhairi-content workshop-includes-content cc-workshop-includes">
+        <div class="why-mhairi-content workshop-includes-content la-workshop-includes">
             <div class="home-about-img">
                 <img src="/../static/img/Mhairi_pics/mhairi_on_phone.jpg" alt="mhairi-life-coach-on-phone">
             </div>
             <div class="why-mhairi-title pl-md-0">
                 <h3 class="home-about-subtitle fw-b">
-                    Upon leaving this workshop you will have gained the following: 
+                    Leave this workshop: 
                 </h3>
             </div>
             <div class="home-about-text pl-md-0">
