Add simple sect title to timer

--- a/src/site/business-workshops/limitless-abundance.njk
+++ b/src/site/business-workshops/limitless-abundance.njk
@@ -151,9 +151,11 @@ metaDescription: 'We get laser focused to deliver you career/business clarity li
 
         <!-- countdown timer section -->
     <section class="simple-section bg-aqua">
-        <h2 class="sect-title">
-            JOIN ME FOR THE LIMITLESS ABUNDANCE WORKSHOP 
-        </h2>
+        <div class="simple-section-title">
+            <h2 class="sect-title">
+                JOIN ME FOR THE LIMITLESS ABUNDANCE WORKSHOP 
+            </h2>
+        </div>
         <div class="simple-section-text">
             <div class="timer-container">
                 <div class="timer-digit-container">
