--- a/static/css/main.css
+++ b/static/css/main.css
@@ -1034,6 +1034,12 @@ break {
   margin: auto;
 }
 
+@media only screen and (max-width: 500px) {
+  .simple-section-title {
+    margin: 0 1em;
+  }
+}
+
 .simple-section-text {
   margin: 2em auto 4em auto;
   width: 90vw;
@@ -14396,6 +14402,18 @@ html {
 @media only screen and (min-width: 992px) {
   .la-workshop-hero .right-hero-text {
     right: 0;
+  }
+}
+
+@media only screen and (min-width: 768px) and (max-width: 991px) {
+  .la-workshop-includes {
+    height: 29.5em;
+  }
+}
+
+@media only screen and (min-width: 992px) and (max-width: 1199px) {
+  .la-workshop-includes {
+    height: 22.5em;
   }
 }
 /*# sourceMappingURL=main.css.map */
