EDIT: remove replay-avail on snipcart la button

--- a/src/site/business-workshops/limitless-abundance.njk
+++ b/src/site/business-workshops/limitless-abundance.njk
@@ -160,7 +160,7 @@ metaDescription: 'We get laser focused to deliver you career/business clarity li
             <div class="timer-container">
                 <div class="timer-digit-container">
                     <div class="timer-digit rob-font">
-                        <p id="timer-days" class="timer-text law replay-avail">
+                        <p id="timer-days" class="timer-text law">
 
                         </p>
                     </div>
