Add replay for law

--- a/src/site/business-workshops/limitless-abundance.njk
+++ b/src/site/business-workshops/limitless-abundance.njk
@@ -104,9 +104,9 @@ metaDescription: 'We get laser focused to deliver you career/business clarity li
                 data-item-id="#WS3"
                 data-item-price="15"
                 data-item-url="/business-workshops/limitless-abundance"
-                data-item-description="Limitless Abundance in Career and Business Workshop"
+                data-item-description="Limitless Abundance in Career and Business Workshop - replay"
                 data-item-image=""
-                data-item-name="Limitless Abundance in Career and Business Workshop">
+                data-item-name="Limitless Abundance in Career and Business Workshop - replay">
                 Get your ticket
             </button>
         </div>
@@ -160,7 +160,7 @@ metaDescription: 'We get laser focused to deliver you career/business clarity li
             <div class="timer-container">
                 <div class="timer-digit-container">
                     <div class="timer-digit rob-font">
-                        <p id="timer-days" class="timer-text law">
+                        <p id="timer-days" class="timer-text law replay-avail">
 
                         </p>
                     </div>
@@ -205,9 +205,9 @@ metaDescription: 'We get laser focused to deliver you career/business clarity li
                 data-item-id="#WS3"
                 data-item-price="15"
                 data-item-url="/business-workshops/limitless-abundance"
-                data-item-description="Limitless Abundance in Career and Business Workshop"
+                data-item-description="Limitless Abundance in Career and Business Workshop - replay"
                 data-item-image=""
-                data-item-name="Limitless Abundance in Career and Business Workshop">
+                data-item-name="Limitless Abundance in Career and Business Workshop - replay">
                 Get your ticket
             </button>
         </div>
@@ -250,9 +250,9 @@ metaDescription: 'We get laser focused to deliver you career/business clarity li
                     data-item-id="#WS3"
                     data-item-price="15"
                     data-item-url="/business-workshops/limitless-abundance"
-                    data-item-description="Limitless Abundance in Career and Business Workshop"
+                    data-item-description="Limitless Abundance in Career and Business Workshop  - replay"
                     data-item-image=""
-                    data-item-name="Limitless Abundance in Career and Business Workshop">
+                    data-item-name="Limitless Abundance in Career and Business Workshop  - replay">
                     Get your ticket
                 </button>
             </div>
@@ -293,9 +293,9 @@ metaDescription: 'We get laser focused to deliver you career/business clarity li
                 data-item-id="#WS3"
                 data-item-price="15"
                 data-item-url="/business-workshops/limitless-abundance"
-                data-item-description="Limitless Abundance in Career and Business Workshop"
+                data-item-description="Limitless Abundance in Career and Business Workshop  - replay"
                 data-item-image=""
-                data-item-name="Limitless Abundance in Career and Business Workshop">
+                data-item-name="Limitless Abundance in Career and Business Workshop  - replay">
                 JOIN ME FOR THE LIMITLESS ABUNDANCE WORKSHOP
             </button>
         </div>
