--- a/src/site/The-Enough-Effect.njk
+++ b/src/site/The-Enough-Effect.njk
@@ -55,7 +55,7 @@ metaDescription: 'A 7 week LIVE coaching journey where we will cover the absolut
                 Sorry, your browser doesn't support embedded videos.
             </video>
         </div>
-        <a class="btn-dark-pink services-cta-btn bg-red" href="#paymentSection">Sign me up!</a>
+        <a class="btn-dark-pink services-cta-btn bg-red" href="#paymentSection">Book your spot!</a>
     </section>
     <!-- END: video section -->
 
@@ -72,26 +72,26 @@ metaDescription: 'A 7 week LIVE coaching journey where we will cover the absolut
                 In 2018 I identified what was holding me back; I believed I wasn’t good enough. Though logically I could see that was pretty unfair, it didn't help. 
             </p>
             <p class="normal-text">
-                It was a bumpy road but I eventually figured out the steps to transform.  Let me share them with you: 
+                But here’s what I did: 
             </p>
             <div class="intro-list">
                 <ul class="workshop-includes-list normal-text">
                     <li class="workshop-includes-item">
                         <i class="far fa-check-circle"></i>
-                        <span class="workshop-includes-item-text">Give yourself time and attention.</span>
+                        <span class="workshop-includes-item-text">Giving time and attention to the one thing that could make a difference; me.</span>
                     </li>
                     <li class="workshop-includes-item">
                         <i class="far fa-check-circle"></i>
-                        <span class="workshop-includes-item-text">Do the deep, transformative inner work.</span>
+                        <span class="workshop-includes-item-text">Building trust where it matter; in myself.</span>
                     </li>
                     <li class="workshop-includes-item">
                         <i class="far fa-check-circle"></i>
-                        <span class="workshop-includes-item-text">Put focus and energy into the right place and build the trust where it matters most, within you.</span>
+                        <span class="workshop-includes-item-text">Working on the most crucial relationship of all: the one i had with me.</span>
                     </li>
                 </ul>
             </div>
             <p class="normal-text">
-                It's with that intention I have created this program. To help you stand in your own worth, unlock the parts of you limiting your joy and be guided to navigate those so you can finally say: <span class="fw-b">I am enough.</span> 
+                It's with that intention I have created this program. To help you finally and fully stand in your own worth, unlock the parts of you limiting your joy and be guided to navigate those. 
             </p>
         </div>
     </section>
@@ -149,11 +149,11 @@ metaDescription: 'A 7 week LIVE coaching journey where we will cover the absolut
                     </li>
                     <li class="workshop-includes-item">
                         <i class="far fa-check-circle"></i>
-                        <span class="workshop-includes-item-text">Unlock incredible tools to climb down the fantasy ladder and connect with your true self.</span>
+                        <span class="workshop-includes-item-text">Unlock incredible tools to climb down that fantasy ladder and connect with your truth.</span>
                     </li>
                     <li class="workshop-includes-item">
                         <i class="far fa-check-circle"></i>
-                        <span class="workshop-includes-item-text">Discover not just who you truly are but what you truly want.</span>
+                        <span class="workshop-includes-item-text">Discover not just who you are but what you truly desire for yourself.</span>
                     </li>
                     <li class="workshop-includes-item">
                         <i class="far fa-check-circle"></i>
@@ -171,20 +171,20 @@ metaDescription: 'A 7 week LIVE coaching journey where we will cover the absolut
                     </li>
                     <li class="workshop-includes-item">
                         <i class="far fa-check-circle"></i>
-                        <span class="workshop-includes-item-text">We achieve the essentials of setting loving but firm boundaries.</span>
+                        <span class="workshop-includes-item-text">Achieve the essentials of setting loving but firm boundaries.</span>
                     </li>
                     <li class="workshop-includes-item">
                         <i class="far fa-check-circle"></i>
-                        <span class="workshop-includes-item-text">Sit in our self worth, own who you are and dare to dream.</span>
+                        <span class="workshop-includes-item-text">Sit in your self worth, own who you are and dare to dream.</span>
                     </li>
                     <li class="workshop-includes-item">
                         <i class="far fa-check-circle"></i>
-                        <span class="workshop-includes-item-text">Uncover your personal being enough plan, mapping out your next 6 weeks with clarity and confidence.</span>
+                        <span class="workshop-includes-item-text">Uncover your personal 'Enough Effect' plan, mapping out your next 7 weeks with clarity and confidence.</span>
                     </li>
                 </ul>
             </div>    
         </div>
-        <a class="btn-dark-pink services-cta-btn bg-red" href="#paymentSection">Sign me up!</a>
+        <a class="btn-dark-pink services-cta-btn bg-red" href="#paymentSection">Book your spot!</a>
     </section>
     <!-- END: our journey section-->
 
@@ -220,9 +220,9 @@ metaDescription: 'A 7 week LIVE coaching journey where we will cover the absolut
             </div>
             <div class="home-about-text">
                 <div class="when-how-item">
-                    <span class="home-about-subtitle pink-text">Who? </span>
+                    <span class="home-about-subtitle pink-text">Who is it for? </span>
                     <p class="normal-text">
-                    Incredible women just like you from any and all backgrounds. This will be a safe, respectful and inclusive space. 
+                    Incredible women/LGBTQI+  just like you, from any and all backgrounds. This will be a safe, respectful and inclusive space. 
                     </p>
                     <p class="normal-text">
                         So even if you have ‘the fear’, even if you have confidence wobbles and even if you have felt this way for a very long time, I’ve got you.
@@ -232,9 +232,26 @@ metaDescription: 'A 7 week LIVE coaching journey where we will cover the absolut
                     </p>
                 </div>
                 <div class="when-how-item">
-                    <span class="home-about-subtitle pink-text">When? </span>
-                    <p class="normal-text">Kickstart opening ritual on Monday 3rd May 8pm. There after every Wednesday evening at 8pm LIVE.</p>
-                    <p class="normal-text">We will spend a delightful 6 weeks together!</p>
+                    <span class="home-about-subtitle pink-text">How long,when and how? </span>
+                    <p class="normal-text">We will spend a delightful 7 weeks together:</p>
+                    <ul class="workshop-includes-list normal-text">
+                        <li class="workshop-includes-item">
+                            <i class="far fa-check-circle"></i>
+                            <span class="workshop-includes-item-text">Week one we kickstart with the opening ritual on Monday 11th October 8pm.</span>
+                        </li>
+                        <li class="workshop-includes-item">
+                            <i class="far fa-check-circle"></i>
+                            <span class="workshop-includes-item-text">Wednesday that same week at 8pm we plunge into the first juicy module RELEASE: What we resist, persists.</span>
+                        </li>
+                        <li class="workshop-includes-item">
+                            <i class="far fa-check-circle"></i>
+                            <span class="workshop-includes-item-text">Thereafter we will see each other every week alternating between a Wednesday evening and Friday afternoon.</span>
+                        </li>
+                        <li class="workshop-includes-item">
+                            <i class="far fa-check-circle"></i>
+                            <span class="workshop-includes-item-text">Pssst Look out for the exclusive bonus guest workshop from a wonderful Body and Mindset coach.</span>
+                        </li>
+                    </ul>
                 </div>
             </div>
         </div>
@@ -249,19 +266,6 @@ metaDescription: 'A 7 week LIVE coaching journey where we will cover the absolut
             </div>
             <div class="home-about-text">
                 <div class="when-how-item">
-                    <span class="home-about-subtitle pink-text">How? </span><p class="normal-text">The weeks will alternate between:</p>
-                    <ul class="workshop-includes-list normal-text">
-                        <li class="workshop-includes-item">
-                            <i class="far fa-check-circle"></i>
-                            <span class="workshop-includes-item-text">A live coaching module delivered by me for you to digest and implement.</span>
-                        </li>
-                        <li class="workshop-includes-item">
-                            <i class="far fa-check-circle"></i>
-                            <span class="workshop-includes-item-text">A live follow up session for us to review insights, support each other and address specific questions.</span>
-                        </li>
-                    </ul>
-                </div>
-                <div class="when-how-item">
                     <span class="home-about-subtitle pink-text mb-2">Psst..</span>
                     <p class="normal-text">
                         Can’t make a live session?  No worries. All sessions will be recorded and emailed out the following day so you can dip in and out as you need to. 
@@ -272,6 +276,7 @@ metaDescription: 'A 7 week LIVE coaching journey where we will cover the absolut
                     <p class="normal-text">
                         My intention is to be present as your guide as you put in the work but to also allow you to live your life as well.
                     </p>
+                    <a class="btn-dark-pink services-cta-btn bg-red" href="#paymentSection">Book your spot</a>
                 </div>
             </div>
         </div>
@@ -294,7 +299,7 @@ metaDescription: 'A 7 week LIVE coaching journey where we will cover the absolut
             </div>
             <div class="known-for-item">
                 <i class="fas fa-users"></i>
-                <p class="known-for-text normal-text">An entirely optional members-only social media group.  This is to provide a space to share, connect, learn, discuss or simply observe.</p>
+                <p class="known-for-text normal-text">An entirely optional members-only social media group.  This is to provide a space to share, connect, learn, discuss or simply observe.  However you feel called to participate will be absolutely right for you.</p>
             </div>
             <div class="known-for-item">
                 <i class="fab fa-whatsapp-square"></i>
@@ -304,6 +309,10 @@ metaDescription: 'A 7 week LIVE coaching journey where we will cover the absolut
                 <i class="fas fa-book"></i>
                 <p class="known-for-text normal-text">Tools and worksheets through the course to bolster your transformative journey</p>
             </div>
+            <div class="known-for-item">
+                <i class="fas fa-book"></i>
+                <p class="known-for-text normal-text">An exclusive guest workshop from an incredible body and mindset coach.</p>
+            </div>
         </div>
     </section>
 
@@ -312,11 +321,11 @@ metaDescription: 'A 7 week LIVE coaching journey where we will cover the absolut
     <!-- payments options -->
     <section id="paymentSection" class="payment-options">
         <h2 class="sect-title how-title">
-            The Investment Options
+            The Payment Options
         </h2>
         <div class="simple-section-text">
             <p class="normal-text">
-                The program costs £225.  You can choose from several direct debit payment options to best suit you.  The first payment will be on 30th April and each month thereafter until the total is paid. 
+                The program costs £225.  You can choose from several direct debit payment options to best suit you.  The first payment will be taken on 31st October and each month thereafter until the total is paid. 
             </p>
             <p class="normal-text">
                 Payments are processed with <a href="https://gocardless.com/" target="_blank">GoCardless</a>. Selecting an option below will take you to the GoCardless registration page where you will complete a registration form.
@@ -327,36 +336,73 @@ metaDescription: 'A 7 week LIVE coaching journey where we will cover the absolut
                 <h3 class="sect-subtitle fw-b">Payment plans</h3>
                 <div class="payment-figure">
                     <div class="payment-figure-content bg-blue fw-b">
-                        <p class="sect-subtitle being-enough-price m-0">£225</p>
+                        <p class="sect-subtitle being-enough-price m-0">£255</p>
                         <p class="normal-text m-0">Payment options below</p>
                     </div>
                 </div>
                 <form class="form">
                     <div class="inputGroup">
                         <input id="radio1" name="radio" type="radio"/>
-                        <label id="label1" class="normal-text" for="radio1">1 payment of £225</label>
+                        <label id="label1" class="normal-text" for="radio1">1 payment of £255</label>
                     </div>
                     <div class="inputGroup">
                         <input id="radio2" name="radio" type="radio"/>
-                        <label class="normal-text" for="radio2">2 payments of £112.50</label>
+                        <label class="normal-text" for="radio2">2 payments of £127.50</label>
                     </div>
                     <div class="inputGroup">
                         <input id="radio3" name="radio" type="radio"/>
-                        <label class="normal-text" for="radio3">3 payments of £75</label>
+                        <label class="normal-text" for="radio3">3 payments of £85</label>
                     </div>
                     <div class="inputGroup">
                         <input id="radio4" name="radio" type="radio"/>
-                        <label class="normal-text" for="radio4">4 payments of £56.25</label>
+                        <label class="normal-text" for="radio4">4 payments of £63.75</label>
                     </div>
                     <div class="inputGroup">
                         <input id="radio5" name="radio" type="radio"/>
-                        <label class="normal-text" for="radio5">5 payments of £45</label>
+                        <label class="normal-text" for="radio5">5 payments of £51</label>
+                    </div>
+                    <div class="inputGroup">
+                        <input id="radio5" name="radio" type="radio"/>
+                        <label class="normal-text" for="radio5">6 payments of £42.50</label>
                     </div>
                     <a id="beingEnoughBtn" class="btn-dark-pink sign-me-up-btn bg-blue" href="" target="_blank">Book your spot!</a>
                 </form>
-                <p class="payment-small-text">*Payments by GoCardless. Read the <a href="https://gocardless.com/privacy" target="_blank">GoCardless privacy notice.</a> Being Enough Program <a href="/being-enough-terms" target="_blank"> Ts & Cs</a></p>
+                <p class="payment-small-text">*Payments by GoCardless. Read the <a href="https://gocardless.com/privacy" target="_blank">GoCardless privacy notice.</a> The Enough Effect Program <a href="/being-enough-terms" target="_blank"> Ts & Cs</a></p>
             </div>    
         </div>
     </section>
     <!-- END: payment options -->
 
+    <!-- FAQ -->
+    <section class="faq-section">
+        <h2 class="faq-title sect-title">
+            Frequently asked questions
+        </h2>
+        <div class="faq-content">
+            <div class="faq-item">
+                <h3 class="sect-subtitle who-for-sub faq-sub">How many people will be in the group?</h3>
+                <p class="normal-text">
+                    A personal disaster was absolutely the trigger point for me radically changing my life for the better. I knew I wanted to.
+                </p>
+            </div>
+            <div class="faq-item">
+                <h3 class="sect-subtitle who-for-sub faq-sub">Do I have to talk?</h3>
+                <p class="normal-text">
+                    The main differences are length of program, frequency of sessions and depth of discovery and therefore, change. 
+                </p>
+            </div>
+            <div class="faq-item">
+                <h3 class="sect-subtitle who-for-sub faq-sub">What if I miss a week?</h3>
+                <p class="normal-text">
+                    Of course. I make it a priority to only take on clients for whom coaching is right and I am a good fit for.  
+                </p>
+            </div> 
+            <div class="faq-item">
+                <h3 class="sect-subtitle who-for-sub faq-sub">How do I know it's right for me?</h3>
+                <p class="normal-text">
+                    Yes! I absolutely love the clients I sign up to my program, as such I offer a 10% refer a dream boat discount. 
+                </p>
+            </div> 
+        </div>
+    </section>
+    <!-- END: FAQ -->
