Edit mhairi copy for enough effect

--- a/src/site/The-Enough-Effect.njk
+++ b/src/site/The-Enough-Effect.njk
@@ -220,7 +220,7 @@ metaDescription: 'A 7 week LIVE coaching journey where we will cover the absolut
             </div>
             <div class="home-about-text">
                 <div class="when-how-item">
-                    <span class="home-about-subtitle pink-text">Who is it for? </span>
+                    <div class="home-about-subtitle pink-text">Who is it for? </div>
                     <p class="normal-text">
                     Incredible women/LGBTQI+  just like you, from any and all backgrounds. This will be a safe, respectful and inclusive space. 
                     </p>
@@ -232,7 +232,7 @@ metaDescription: 'A 7 week LIVE coaching journey where we will cover the absolut
                     </p>
                 </div>
                 <div class="when-how-item">
-                    <span class="home-about-subtitle pink-text">How long,when and how? </span>
+                    <div class="home-about-subtitle pink-text">How long,when and how? </div>
                     <p class="normal-text">We will spend a delightful 7 weeks together:</p>
                     <ul class="workshop-includes-list normal-text">
                         <li class="workshop-includes-item">
@@ -266,7 +266,7 @@ metaDescription: 'A 7 week LIVE coaching journey where we will cover the absolut
             </div>
             <div class="home-about-text">
                 <div class="when-how-item">
-                    <span class="home-about-subtitle pink-text mb-2">Psst..</span>
+                    <div class="home-about-subtitle pink-text">Psst..</div>
                     <p class="normal-text">
                         Can’t make a live session?  No worries. All sessions will be recorded and emailed out the following day so you can dip in and out as you need to. 
                     </p>
@@ -276,7 +276,6 @@ metaDescription: 'A 7 week LIVE coaching journey where we will cover the absolut
                     <p class="normal-text">
                         My intention is to be present as your guide as you put in the work but to also allow you to live your life as well.
                     </p>
-                    <a class="btn-dark-pink services-cta-btn bg-red" href="#paymentSection">Book your spot</a>
                 </div>
             </div>
         </div>
@@ -310,7 +309,7 @@ metaDescription: 'A 7 week LIVE coaching journey where we will cover the absolut
                 <p class="known-for-text normal-text">Tools and worksheets through the course to bolster your transformative journey</p>
             </div>
             <div class="known-for-item">
-                <i class="fas fa-book"></i>
+                <i class="fas fa-spa"></i>
                 <p class="known-for-text normal-text">An exclusive guest workshop from an incredible body and mindset coach.</p>
             </div>
         </div>
@@ -325,7 +324,7 @@ metaDescription: 'A 7 week LIVE coaching journey where we will cover the absolut
         </h2>
         <div class="simple-section-text">
             <p class="normal-text">
-                The program costs £225.  You can choose from several direct debit payment options to best suit you.  The first payment will be taken on 31st October and each month thereafter until the total is paid. 
+                The program costs £255.  You can choose from several direct debit payment options to best suit you.  The first payment will be taken on 31st October and each month thereafter until the total is paid. 
             </p>
             <p class="normal-text">
                 Payments are processed with <a href="https://gocardless.com/" target="_blank">GoCardless</a>. Selecting an option below will take you to the GoCardless registration page where you will complete a registration form.
